<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/news"
        android:orderInCategory="1"
        android:icon="@drawable/news"
        android:title="@string/news"/>

    <item android:id="@+id/program"
        android:orderInCategory="2"
        android:icon="@drawable/calendar"
        android:title="@string/program"/>

    <item android:id="@+id/about"
        android:orderInCategory="3"
        android:icon="@drawable/about"
        android:title="@string/about"/>

    <item android:id="@+id/speakers"
        android:orderInCategory="4"
        android:icon="@drawable/speakers"
        android:title="@string/speakers"/>

    <item android:id="@+id/leaders"
        android:orderInCategory="5"
        android:icon="@drawable/leaders"
        android:title="@string/leaders"/>

    <item android:id="@+id/org"
        android:orderInCategory="6"
        android:icon="@drawable/org"
        android:title="@string/org"/>

    <item android:id="@+id/partners"
        android:orderInCategory="7"
        android:icon="@drawable/partners"
        android:title="@string/partners"/>

    <item android:id="@+id/profile"
        android:orderInCategory="8"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item android:id="@+id/dev"
        android:orderInCategory="9"
        android:icon="@drawable/dev"
        android:title="@string/dev"/>

</menu>