<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context="ru.stairenx.viergo.youleadomsk.MainActivity"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:background="?attr/colorPrimary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="350dp"
                android:layout_height="74dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/logo_stairenx"/>
        </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/border_grey"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutdev"
                        android:paddingTop="3dp"
                        android:paddingBottom="2dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textSize="18dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_white">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="16dp"
                            android:id="@+id/stx"
                            android:layout_marginLeft="16dp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/border_grey"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutdevcon"
                        android:paddingTop="3dp"
                        android:paddingBottom="2dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:textSize="18dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_white"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/mycontactsName"
                            android:layout_marginLeft="16dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="20dp"
                            android:linksClickable="true"
                            android:autoLink="email"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/mycontactsEmail"
                            android:layout_marginLeft="16dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="18dp"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="16dp"
                            android:text="@string/mycontactsPhone"
                            android:layout_marginLeft="16dp"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/myBlue"
        app:itemTextColor="@color/mainBackground"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"/>

</android.support.v4.widget.DrawerLayout>