<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoDragView="@+id/dragView"
    sothree:umanoOverlay="true"
    sothree:umanoScrollableView="@+id/list">

    <!-- MAIN CONTENT -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            xmlns:sothree="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/main_toolbar"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/myGreen"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#d6d6d6"
                android:gravity="center"
                android:textSize="24dp"
                android:text="@string/log_in"/>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:paddingTop="?attr/actionBarSize"
            android:paddingBottom="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="12dp">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_phone"
                            android:inputType="phone"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_in_login"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_login_pass"
                            android:inputType="textPassword"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_in_pas"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <Button
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/sign_up_button"
                    app:backgroundTint="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#d6d6d6"
                    android:textSize="12dp"
                    android:text="@string/login_btn"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"/>

            </android.support.design.widget.CoordinatorLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- SLIDING LAYOUT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="false"
        android:id="@+id/dragView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/myGreen"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#d6d6d6"
                android:gravity="center"
                android:textSize="24dp"
                android:text="@string/log_up"/>
        </LinearLayout>


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="12dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Телефон"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:id="@+id/sign_up_phone"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_up_email"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Имя"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_up_name"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Фамилия"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_up_sername"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/hint_login_info"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_login_info2"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="О себе"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_up_Info"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Пароль"
                            android:inputType="textPassword"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_up_pas"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Повторите пароль"
                            android:inputType="textPassword"
                            android:imeOptions="actionNext"
                            android:id="@+id/sign_up_repas"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </ScrollView>

            <android.support.design.widget.FloatingActionButton
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/sign_up_fab"
                app:backgroundTint="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end|bottom"
                android:src="@drawable/next"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"/>

        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>