<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context="ru.stairenx.viergo.youleadomsk.MainActivity"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:background="?attr/colorPrimary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_grey">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_general"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="20dp"/>
                </LinearLayout>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="285px"
                        android:id="@+id/metro"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_grey">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/partner_key"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="15dp"
                            android:textSize="20dp"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="165px"
                        android:id="@+id/lerua"/>
                </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_grey">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/partner_strategy"
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_marginLeft="15dp"
                                android:textSize="20dp"/>
                        </LinearLayout>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="165px"
                            android:id="@+id/univer"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_grey">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_organisaters"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="95px"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:id="@+id/skuratov"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="195px"
                        android:layout_weight="1"
                        android:id="@+id/rahat"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="195px"
                        android:layout_weight="1"
                        android:id="@+id/fotoshkola"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="195px"
                        android:layout_weight="1"
                        android:id="@+id/eva"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="95px"
                    android:id="@+id/stairenx"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_grey">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/partner_info"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="18dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="195px"
                            android:layout_weight="1"
                            android:id="@+id/apriori"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="195px"
                            android:layout_weight="1"
                            android:id="@+id/mayak"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="195px"
                            android:layout_weight="1"
                            android:id="@+id/molodoy"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="485px"
                        android:layout_weight="1"
                        android:id="@+id/dacha"/>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="195px"
                    android:layout_weight="1"
                    android:id="@+id/vesomsk"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="195px"
                    android:layout_weight="1"
                    android:id="@+id/om1"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/myGreen"
        app:itemTextColor="@color/mainBackground"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/navigation_header"/>

</android.support.v4.widget.DrawerLayout>